<resources>
    <string name="app_name">FingerAssist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">ID: XXXXXXXXX</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_marcaciones">Marcaciones</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_credits">Acerca de</string>
    <string name="menu_logout">Cerrar Sesion</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>