<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_marcaciones"
            android:icon="@drawable/event_available"
            android:title="@string/menu_marcaciones" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/account_circle"
            android:title="@string/menu_perfil" />
    </group>

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/settings"
            android:title="@string/menu_ajustes" />-->

        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/info"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/power_settings_new"
            android:title="@string/menu_logout" />

    </group>

</menu>